[package]
name = "nano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.3.1"
bitvec = "1.0.1"
blake2 = "0.10.6"
bytes = "1.4.0"
# ed25519-dalek = { version = "1.0.1", package = "ed25519-dalek-blake2-feeless" }
ed25519-dalek-bip32 = { version = "0.1.1", package = "ed25519-dalek-bip32-feeless" }
hex = "0.4.3"
once_cell = "1.17.1"
rand = "0.8.5"
regex = "1.8.1"
serde_json = "1.0.97"
thiserror = "1.0.40"
serde = { version = "1.0.126", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
ed25519-dalek-blake2b = "1.0.2"
